--- a/profile.html
+++ b/profile.html
@@ -88,8 +88,8 @@
     <div class="profile-container">
         <img src="profile-pic.png" alt="Profile Picture" class="profile-pic">
         <div class="profile-info">
-            <h2>Pranjal Parmar</h2>
-            <p>Navi Mumbai</p>
+            <h2>Sakshi Salvi</h2>
+            <p>Thane</p>
         </div>
 
         <div class="stats">
@@ -114,11 +114,6 @@
 
 
 
-    <div class="navbar">
-        <img src="home-icon.png" alt="Home">
-        <img src="faq-icon.png" alt="FAQ">
-        <img src="settings-icon.png" alt="Settings">
-    </div>
 
 </body>
 </html>
