--- a/index.html
+++ b/index.html
@@ -179,6 +179,17 @@
     .footer a:hover {
       color: #aed581;
     }
+
+    .btn{
+            background-color: #000000;
+            padding: 15px;
+            width: 130px;
+            border-radius: 10px;
+            color: white;
+            text-align: center;
+            cursor: pointer;
+            text-decoration: none;
+        }
   </style>
 </head>
 <body>
@@ -186,7 +197,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <h1>Home</h1>
-    <button class="logout-button">Profile</button>
+    <a href="profile.html" class="btn">Profile</a>
     <button class="logout-button">Logout</button>
 
   </nav>
@@ -195,11 +206,14 @@
   <section class="hero">
     <h2>Green Earth Conservation Society</h2>
     <h3>Join Now!!!</h3>
-  </section>
-
+    
+    
+  </section><br>
+  
   <!-- Welcome Text -->
   <div class="welcome">Welcome back, Warrior!</div>
-
+ <center> <a href="login.html" class="btn">Login</a>
+  <a href="register.html" class="btn">Register</a><center><br><br>
   <!-- Button Grid with icons -->
   <div class="button-grid">
     <a href="challenges.html" class="challenges">
