--- a/challenges.html
+++ b/challenges.html
@@ -104,7 +104,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <h1>Challenges</h1>
-    <a href="socialcare.html" class="home-button">Home</a> <!-- Link back to the home page -->
+    <a href="index.html" class="home-button">Home</a> <!-- Link back to the home page -->
   </nav>
 
   <!-- Challenges Section -->
