--- a/login.html
+++ b/login.html
@@ -79,8 +79,8 @@
             const loginPass = document.getElementById('login-pass').value;
 
             // Check if the entered credentials match the hardcoded ones
-            if (loginId === 'sakshi' && loginPass === 'sakshi') {
-                window.location.href = 'socialcare.html';  // Redirect to home page
+            if (loginId === 'Sakshi' && loginPass === 'sakshi') {
+                window.location.href = 'index.html';  // Redirect to home page
             } else {
                 alert('Invalid credentials, please try again.');
             }
