--- a/profile.html
+++ b/profile.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="profile-container">
-        <img src="profile-pic.png" alt="Profile Picture" class="profile-pic">
+        <img src="img/img.jpg" alt="Profile Picture" class="profile-pic">
         <div class="profile-info">
             <h2>Sakshi Salvi</h2>
             <p>Thane</p>
