--- a/wwcommunity.html
+++ b/wwcommunity.html
@@ -61,6 +61,8 @@
             padding: 10px;
             border-radius: 50%;
             cursor: pointer;
+            right: 54px;
+            top: 7px;
         }
         .footer {
             display: flex;
