--- a/cleanliness.html
+++ b/cleanliness.html
@@ -65,7 +65,7 @@
     <div class="container">
         <div class="header">
             <h1>Cleanliness Drives</h1>
-            <button class="btn">Home</button>
+            <a href="index.html"><button class="btn">Home</button></a>
         </div>
 
         <div class="drive-banner">
