--- a/donations.html
+++ b/donations.html
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="header">
             <h1>Donation</h1>
-            <button class="btn">Home</button>
+            <a href="index.html"><button class="btn">Home</button></a>
         </div>
 
         <div class="donation-banner">
