--- a/profile.html
+++ b/profile.html
@@ -37,45 +37,26 @@
         .stats {
             display: flex;
             justify-content: space-around;
-            background-color: #d6f5d6;
             padding: 20px;
-            border-radius: 10px;
             margin-top: 20px;
         }
         .stats div {
             text-align: center;
+            padding: 20px;
+            border: 2px solid #4ca64c; /* Border around each stat */
+            border-radius: 10px;
+            width: 100px;
+            background-color: #e6ffe6; /* Light background for contrast */
         }
         .stats div h3 {
             color: #4ca64c;
+            margin: 0;
+            padding-bottom: 10px;
         }
-        .footer {
-            margin-top: 30px;
-        }
-        .footer div {
-            background-color: #e6ffe6;
-            padding: 10px;
-            margin: 10px;
-            border-radius: 10px;
-        }
-        .footer div:hover {
-            background-color: #d6f5d6;
-        }
-        .footer a {
-            text-decoration: none;
-            color: #4ca64c;
-        }
-        .navbar {
-            display: flex;
-            justify-content: space-around;
-            background-color: #d6f5d6;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        .navbar img {
-            width: 40px;
-            height: 40px;
+        .stats div p {
+            margin: 0;
+            font-size: 1.2em;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -111,9 +92,6 @@
             </div>
         </div>
     </div>
-
-
-
 
 </body>
 </html>
