--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
         }
         .header {
             background-color: #d6f5d6;
@@ -16,6 +18,7 @@
         }
         .header h1 {
             color: #4ca64c;
+            margin: 0;
         }
         .profile-container {
             text-align: center;
@@ -39,14 +42,19 @@
             justify-content: space-around;
             padding: 20px;
             margin-top: 20px;
+            gap: 20px;
+            flex-wrap: wrap;
         }
         .stats div {
             text-align: center;
             padding: 20px;
-            border: 2px solid #4ca64c; /* Border around each stat */
+            border: 2px solid #4ca64c;
             border-radius: 10px;
             width: 100px;
-            background-color: #e6ffe6; /* Light background for contrast */
+            background-color: #e6ffe6;
+            flex: 1;
+            min-width: 100px;
+            max-width: 150px;
         }
         .stats div h3 {
             color: #4ca64c;
@@ -57,6 +65,34 @@
             margin: 0;
             font-size: 1.2em;
             font-weight: bold;
+        }
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .stats {
+                flex-direction: column;
+                align-items: center;
+            }
+            .profile-pic {
+                width: 100px;
+                height: 100px;
+            }
+            .stats div {
+                width: 80%;
+                max-width: 200px;
+            }
+        }
+        @media (max-width: 480px) {
+            .profile-pic {
+                width: 80px;
+                height: 80px;
+            }
+            .profile-info h2 {
+                font-size: 1.5em;
+            }
+            .stats div {
+                padding: 15px;
+                font-size: 1em;
+            }
         }
     </style>
 </head>
@@ -91,6 +127,7 @@
                 <p>79</p>
             </div>
         </div>
+        
     </div>
 
 </body>
