--- a/profile.html
+++ b/profile.html
@@ -8,8 +8,6 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
         }
         .header {
             background-color: #d6f5d6;
@@ -18,7 +16,6 @@
         }
         .header h1 {
             color: #4ca64c;
-            margin: 0;
         }
         .profile-container {
             text-align: center;
@@ -40,21 +37,61 @@
         .stats {
             display: flex;
             justify-content: space-around;
+            background-color: #d6f5d6;
             padding: 20px;
+            border-radius: 10px;
             margin-top: 20px;
+        }
+        /* .stats div {
+            text-align: center;
+        }
+        .stats div h3 {
+            color: #4ca64c;
+        } */
+        .footer {
+            margin-top: 30px;
+        }
+        .footer div {
+            background-color: #e6ffe6;
+            padding: 10px;
+            margin: 10px;
+            border-radius: 10px;
+        }
+        .footer div:hover {
+            background-color: #d6f5d6;
+        }
+        .footer a {
+            text-decoration: none;
+            color: #4ca64c;
+        }
+        .navbar {
+            display: flex;
+            justify-content: space-around;
+            background-color: #d6f5d6;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        .navbar img {
+            width: 40px;
+            height: 40px;
+        }
+
+        .stats {
+            display: flex;
+            justify-content: space-around;
+            padding: 20px;
             gap: 20px;
             flex-wrap: wrap;
         }
         .stats div {
             text-align: center;
             padding: 20px;
-            border: 2px solid #4ca64c;
-            border-radius: 10px;
-            width: 100px;
+            border: 2px solid #4ca64c; /* Border added */
+            border-radius: 10px;       /* Rounded corners */
+            width: 120px;
             background-color: #e6ffe6;
-            flex: 1;
-            min-width: 100px;
-            max-width: 150px;
         }
         .stats div h3 {
             color: #4ca64c;
@@ -65,34 +102,6 @@
             margin: 0;
             font-size: 1.2em;
             font-weight: bold;
-        }
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .stats {
-                flex-direction: column;
-                align-items: center;
-            }
-            .profile-pic {
-                width: 100px;
-                height: 100px;
-            }
-            .stats div {
-                width: 80%;
-                max-width: 200px;
-            }
-        }
-        @media (max-width: 480px) {
-            .profile-pic {
-                width: 80px;
-                height: 80px;
-            }
-            .profile-info h2 {
-                font-size: 1.5em;
-            }
-            .stats div {
-                padding: 15px;
-                font-size: 1em;
-            }
         }
     </style>
 </head>
@@ -127,8 +136,10 @@
                 <p>79</p>
             </div>
         </div>
-        
     </div>
+
+
+
 
 </body>
 </html>
